--- a/index.html
+++ b/index.html
@@ -3,266 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" href="css/default.css">
 <script src="jquery-1.11.2.min.js"></script>
 <script src="jquery.mobile-1.4.5.min.js"></script>
 <script type="text/javascript" src="stopwatch.js"></script>
 <script type="text/javascript" src="default.js"></script>
-<style>
-
-@font-face {
-  font-family: 'cfn';
-  src: url('./font/cfn.eot?22224300');
-  src: url('./font/cfn.eot?22224300#iefix') format('embedded-opentype'),
-	   url('./font/cfn.woff?22224300') format('woff'),
-	   url('./font/cfn.ttf?22224300') format('truetype'),
-	   url('./font/cfn.svg?22224300#cfn') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-     
-.demo-icon
-{
-  font-family: "cfn";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
- 
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
- 
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
- 
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
- 
-  /* You can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
-
-body {
-  background-image: url('images/bg.jpg');
-  text-shadow: none;
-}
-.ui-header {
-  background: #fff url('images/top.png') repeat no-repeat;
-  border: none !important;
-  height: 85px;
-}
-.ui-header H1 {
-  text-shadow: none;
-  color: #fff;
-  font-weight: normal;
-  text-transform: uppercase;
-  font-size: 14px !important;
-  margin: 0 2px !important;
-}
-.ui-menu-btn {
-float: left;
-  margin: 7px 5px;
-  color: #fff;
-  text-shadow: none;
-  font-size: 22px;
-  font-weight: normal;
-  cursor: pointer;
-}
-.ui-page {
-  background: transparent;
-  }
-.ui-content {
-  background: transparent; 
-}
-.ui-footer {
-	background: #f5d322 !important;
-	height: 1px;
-}
-
-DIV.row {
-	height: 110px;
-}
-DIV.row DIV {
-	height: 100%;
-	width: 50%;
-	background-color: #0000CC;
-	float: left;
-	color: #fff;
-	text-shadow: none;
-	text-align: center;
-	vertical-align: middle;
-	font-size: 11px;
-	padding-top: 50px;
-	cursor: pointer;
-	text-transform: uppercase;
-	font-weight: 100;
-}
-DIV.row DIV>A {
-	text-decoration: none;
-	color: #fff !important;
-}
-DIV.row DIV>A>I {
-	font-size: 44px;
-	display: inline-block;
-	margin-bottom: 10px;
-	text-align: center;
-	width: 90%;
-	text-shadow: 2px 2px #d6a822;
-	cursor: pointer;
-}
-DIV.row DIV>A>I:hover {
-    text-shadow: 2px 2px #666;
-}
-A.icon-reply-outline {
-	float: left;
-	font-size: 22px !important; 
-	text-shadow: none !important;
-	font-weight: 100 !important;
-	margin: 7px -15px 0px 4px !important;
-	border: none !important;
-	background: transparent !important;
-	box-shadow: none !important;
-	color: #fff !important;
-	left: 0px !important;
-	top: 0px !important;
-	padding: 0px !important;
-	cursor: pointer !important;
-}
-.icon {
-	margin: 5px !important; 
-	max-height: 4em !important; 
-}
-.ui-listview>li h2 {
-	margin: 0px !important;
-}
-.ui-listview>li p {
-	margin: 0px !important;
-	font-size: 11px;
-  	line-height: 11px;
-}
-.ui-page-theme-a .ui-btn:focus, .ui-focus {
-	-webkit-box-shadow: 0 0 12px #f5d322 !important;
-	-moz-box-shadow: 0 0 12px #f5d322 !important;
-	box-shadow: 0 0 12px #f5d322 !important;
-}
-.checked:after {
-    background-color: #f5d322;
-}
-
-.lessen {
-  font-size: 12px; 
-}
-DIV.lessen UL LI P {
-	float: right;
-	font-size: 10px;
-	margin: 0px !important;
-}
-DIV.lessen UL LI A {
-    font-size: 14px;
-    color: #444;
-}
-.openingstijden {
-  font-size: 12px;
-  line-height: 17px;
-}
-.openingstijden DIV.dag SPAN {
-  text-shadow: rgb(255, 255, 255) 0px 1px 0px;
-  text-transform: uppercase;
-  display: inline-block;
-  width: 120px;
-  font-size: 14px;
-}
-.openingstijden H3.dag {
-	text-transform: uppercase;
-	font-weight: bold;
-	color: #333333;
-	text-shadow: 0 1px 0px #fff;
-	font-size: 16px;
-}
-.stopwatch LABEL.flipswitch {
-	float: left;
-	display: inline-block;
-}
-.stopwatch DIV.ui-flipswitch {
-	float: right !important;
-	margin-top: -8px !important;
-}
-.stopwatch LABEL.aftel {
-	float: left;
-	display: inline-block;
-	  margin-top: 22px;
-}
-.stopwatch DIV.ui-input-text {
-    width: 58px;
-    float: right;
-}
-.countdown {
-	margin-top: 40px;
-}
-.ui-flipswitch {
-	background-color: #f5d322 !important;
-	border-color: #E0BA28 !important;
-	color: #fff !important;
-	text-shadow: 0 1px 0 #F4BE5D !important;
-}
-.dagschema {
-	 background-color: #666;
-	 color: #fff;
-	 text-transform: uppercase;
-	 text-align: center;
-	 text-shadow: none;
-	 font-size: 11px;
-	 padding: 6px;
-}
-.icon-left {
-float:left;
-margin-top: 2px;
-}
-.icon-right {
-float:right;
-margin-top: 2px;
-}
-
-.part {
-	display: inline;
-	float: left;
-	margin-left: 15px;
-}
-.teller {
-	display: inline;
-	font-size: 60px;
-	margin-left: -4px;
-}
-.tellersmall {
-	display: inline-block;
-	font-size: 20px;
-	margin-left: -6px;
-	margin-top: 38px;
-}
-.eenheid {
-	font-size: 10px;
-	display: block;
-	margin-top: -15px;
-}
-</style>
- 
-
-
-
 
 
 </head>
@@ -270,15 +15,14 @@ margin-top: 2px;
 
 <div data-role="page" id="pageone">
 	<div data-role="header" data-position="fixed">
-		<h1>Goedemorgen Martin</h1> 
+		<h1 id="welkomstekst">Welkom</h1> 
 		<div style="display: block; text-align:center"><img src="images/logo.png" style="margin-top: 5px;"></div>
 	</div>
 	
 	<div data-role="main" class="ui-content" style="padding: 0px;">	
-	<div id="results"></div>
 		<div class="row"><div style="background-color: #f4d379;"><a href="#schema" data-transition="slide"><i class="demo-icon icon-schema">&#xe808;</i><br />Traingsschema</a></div><div style="background-color: #f2cd69;"><a href="#lessen" data-transition="slide"><i class="demo-icon icon-lessen">&#xe803;</i><br />Lessen</a></div></div>
 		<div class="row"><div style="background-color: #f2ca5a;"><a href="#tijden" data-transition="slide"><i class="demo-icon icon-tijden">&#xe800;</i><br />Openingstijden</a></div><div style="background-color: #f1c547;"><a href="#stopwatch" data-transition="slide"><i class="demo-icon icon-stopwatch">&#xe804;</i><br />Stopwatch</a></div></div>
-		<div class="row"><div style="background-color: #f1c241;"><a href="#instellingen" data-transition="slide"><i class="demo-icon icon-instellingen">&#xe809;</i><br />Gegevens</a></div><div style="background-color: #f1c135;"><a id="uitloggen" href="#uitloggen" data-transition="slide"><i class="demo-icon icon-uitloggen">&#xe807;</i><br />Uitloggen</a></div></div>
+		<div class="row"><div style="background-color: #f1c241;"><a href="#instellingen" data-transition="slide"><i class="demo-icon icon-instellingen">&#xe809;</i><br />Gegevens</a></div><div style="background-color: #f1c135;"><a id="afsluiten" href="#afsluiten" data-transition="slide"><i class="demo-icon icon-uitloggen">&#xe807;</i><br />Afsluiten</a></div></div>
 	</div>
 	
 	<div data-role="footer" data-position="fixed">&nbsp;</div>
@@ -405,7 +149,7 @@ margin-top: 2px;
 	</div>
 	
 	<div data-role="main" class="ui-content">
-		<div data-role="controlgroup" data-type="horizontal" style="text-align: left;">
+		<div data-role="controlgroup" data-type="horizontal" align="center">
 		  <input id="stopwatchbutton1" type="button" data-inline="true" value="Start"> 
 		  <input id="stopwatchbutton2" type="button" data-inline="true" value="&nbsp;Lap&nbsp;"> 
 		  <input id="stopwatchbutton3" type="button" data-inline="true" value="Stop"> 
@@ -415,11 +159,10 @@ margin-top: 2px;
 		 <i class="demo-icon" style="
 			position: absolute;
 			top: 16px;
-			left: 0px;
+			left: 10px;
 			font-size: 12px;
-margin-right: 5px;
 		">&#xe804;</i>			
-			<div style="display: table-row; width: 100%;">
+			<div style="display: table-row; width: 100%; text-align: center;">
 				<div class="part">
 					<span class="teller" id="uur">00</span>
 					<span class="eenheid">uur</span>
