--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<div style="display: block; text-align:center"><img src="images/logo.png" style="margin-top: 5px;"></div>
 	</div>
 	<div data-role="main" id="home" class="ui-content" style="padding: 0px;">	
-		<div class="row"><div style="background-color: #f4d379;"><a href="#schema"><i class="demo-icon icon-schema">&#xe808;</i><br />Traingsschema</a></div><div style="background-color: #f2cd69;"><a href="#lessen"><i class="demo-icon icon-lessen">&#xe803;</i><br />Lessen</a></div></div>
-		<div class="row"><div style="background-color: #f2ca5a;"><a href="#tijden"><i class="demo-icon icon-tijden">&#xe800;</i><br />Openingstijden</a></div><div style="background-color: #f1c547;"><a href="#stopwatch"><i class="demo-icon icon-stopwatch">&#xe804;</i><br />Stopwatch</a></div></div>
-		<div class="row"><div style="background-color: #f1c241;"><a href="#instellingen"><i class="demo-icon icon-instellingen">&#xe809;</i><br />Gegevens</a></div><div style="background-color: #f1c135;"><a id="afsluiten" href="#afsluiten"><i class="demo-icon icon-uitloggen">&#xe807;</i><br />Afsluiten</a></div></div>
+		<div class="row"><div style="background-color: #f4d379;"><a href="#schema" data-transition="none"><i class="demo-icon icon-schema">&#xe808;</i><br />Traingsschema</a></div><div style="background-color: #f2cd69;"><a href="#lessen" data-transition="none"><i class="demo-icon icon-lessen">&#xe803;</i><br />Lessen</a></div></div>
+		<div class="row"><div style="background-color: #f2ca5a;"><a href="#tijden" data-transition="none"><i class="demo-icon icon-tijden">&#xe800;</i><br />Openingstijden</a></div><div style="background-color: #f1c547;"><a href="#stopwatch" data-transition="none"><i class="demo-icon icon-stopwatch">&#xe804;</i><br />Stopwatch</a></div></div>
+		<div class="row"><div style="background-color: #f1c241;"><a href="#instellingen" data-transition="none"><i class="demo-icon icon-instellingen">&#xe809;</i><br />Gegevens</a></div><div style="background-color: #f1c135;"><a id="afsluiten" href="#afsluiten" data-transition="none"><i class="demo-icon icon-uitloggen">&#xe807;</i><br />Afsluiten</a></div></div>
 	</div>
 	<div data-role="footer" data-position="fixed">&nbsp;</div>
 </div>
@@ -29,7 +29,7 @@
 
 <div data-role="page" id="schema" class="schema">
 	<div data-role="header" data-position="fixed">
-	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-direction="reverse">&#xe80b;</a> 
+	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-transition="none" data-direction="reverse">&#xe80b;</a> 
 		<h1>Traingsschema</h1> 
 		<div style="display: block; text-align:center"><img src="images/logo.png" style="margin-top: 5px;"></div>
 		<div class="dagschema"><i class="demo-icon icon-left">&#xe80c;</i><span>schema 1</span><i class="demo-icon icon-right">&#xe80d;</i></div>
@@ -105,7 +105,7 @@
 
 <div data-role="page" id="lessen" class="lessen">
 	<div data-role="header" data-position="fixed">
-	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-direction="reverse">&#xe80b;</a> 
+	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-transition="none" data-direction="reverse">&#xe80b;</a> 
 		<h1>Lessen</h1> 
 		<div style="display: block; text-align:center"><img src="images/logo.png" style="margin-top: 5px;"></div>
 	</div>	
@@ -122,7 +122,7 @@
 
 <div data-role="page" id="tijden">
 	<div data-role="header" data-position="fixed">
-	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-direction="reverse">&#xe80b;</a> 
+	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-transition="none" data-direction="reverse">&#xe80b;</a> 
 		<h1>Openingstijden</h1> 
 		<div style="display: block; text-align:center"><img src="images/logo.png" style="margin-top: 5px;"></div>
 	</div>
@@ -142,7 +142,7 @@
 
 <div data-role="page" id="stopwatch" class="stopwatch">
 	<div data-role="header" data-position="fixed">
-	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-direction="reverse">&#xe80b;</a> 
+	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-transition="none" data-direction="reverse">&#xe80b;</a> 
 		<h1>Stopwatch</h1> 
 		<div style="display: block; text-align:center"><img src="images/logo.png" style="margin-top: 5px;"></div>
 	</div>
@@ -186,7 +186,7 @@
 
 <div data-role="page" id="instellingen">
 	<div data-role="header" data-position="fixed">
-	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-direction="reverse">&#xe80b;</a> 
+	<a class="demo-icon icon-reply-outline" role="link" data-rel="back" data-transition="none" data-direction="reverse">&#xe80b;</a> 
 		<h1>Gegevens</h1> 
 		<div style="display: block; text-align:center"><img src="images/logo.png" style="margin-top: 5px;"></div>
 	</div>
