--- a/index.html
+++ b/index.html
@@ -36,66 +36,25 @@
 		<div class="dagschema"><i class="demo-icon icon-left">&#xe80c;</i><span>schema 1</span><i class="demo-icon icon-right">&#xe80d;</i></div>
 	</div>
 	
-	<div data-role="main" class="ui-content">
-	
-	
-	
-		<div class="sch" style="position: relative" data-name="schema 1">
-		<ul data-role="listview" data-inset="true">
-		  <li data-icon="check">
-			<a href="#" class="checked">
-			<img src="equipment\cardio\CC-Elliptical-Elevation-95Xachieve-hero.png" class="icon">
-			<h2>Crosstrainer</h2>
-			<p><strong>15 minuten</strong><br />op een snelheid van +/- 10</p>
-			</a>
-		  </li>
-		  <li data-icon="check">
-			<a href="#">
-			<img src="equipment\cardio\CC-Treadmill-Elevation-95Tachieve-hero.png" class="icon">
-			<h2>Mozilla Firefox</h2>
-			<p>Firefox is a web browser from Mozilla. Released in 2004.</p>
-			</a>
-		  </li>
-		  <li data-icon="check">
-			<a href="#">
-			<img src="equipment\cardio\CLSC_Lifecycle_Hero.png" class="icon">
-			<h2>Mozilla Firefox</h2>
-			<p>Firefox is a web browser from Mozilla. Released in 2004.</p>
-			</a>
-		  </li>
-		  <li data-icon="check">
-			<a href="#">
-			<img src="equipment\cardio\Integrity_PowerMill-hero.png" class="icon">
-			<h2>Mozilla Firefox</h2>
-			<p>Firefox is a web browser from Mozilla. Released in 2004.</p>
-			</a>
-		  </li>
-		</ul>
-		</div>
-		
-		<div class="sch" style="display: none; position: relative" data-name="schema 2">
-		<ul data-role="listview" data-inset="true">
-		  <li data-icon="check">
-			<a href="#">
-			<img src="equipment\cardio\CC-Treadmill-Elevation-95Tachieve-hero.png" class="icon">
-			<h2>Mozilla Firefox</h2>
-			<p>Firefox is a web browser from Mozilla. Released in 2004.</p>
-			</a>
-		  </li>
-		  <li data-icon="check">
-			<a href="#" class="checked">
-			<img src="equipment\cardio\CC-Elliptical-Elevation-95Xachieve-hero.png" class="icon">
-			<h2>Crosstrainer</h2>
-			<p><strong>15 minuten</strong><br />op een snelheid van +/- 10</p>
-			</a>
-		  </li>
-		</ul>
-		</div>
-	</div>
+	<div data-role="main" class="ui-content" id="schemas"></div>
 	
 	<div data-role="footer" data-position="fixed">&nbsp;</div>
 </div> 
 
+
+<div data-role="page" id="training" class="training">
+	<div data-role="header" data-position="fixed">
+	<a href="#schema" class="demo-icon icon-reply-outline" role="link" data-transition="none" data-direction="reverse">&#xe80b;</a> 
+		<h1>Traingsschema</h1> 
+		<div style="display: block; text-align:center"><img src="images/logo.png" style="margin-top: 5px;"></div> 
+	</div>
+	
+	<div data-role="main" class="ui-content">
+	<img class="bigger" />
+	</div>
+	
+	<div data-role="footer" data-position="fixed">&nbsp;</div>
+</div> 
 
 
 
